--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId "com.ooooonly.lma"
         minSdk 21
         targetSdk 30
-        versionCode 11
-        versionName "1.0-alpha.4"
+        versionCode 12
+        versionName "1.0-alpha.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -151,6 +151,9 @@ dependencies {
     implementation "io.coil-kt:coil:1.3.2"
     implementation 'io.coil-kt:coil-compose:1.3.2'
 
+    // okhttp
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    
     // datastore-preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
@@ -174,7 +177,6 @@ dependencies {
     implementation "net.mamoe:mirai-console:$mirai_core_version"
 
     // utils
-    implementation 'com.ooooonly:giteeman:0.1.1'
     implementation 'com.github.javiersantos:AppUpdater:2.7'
 
     //app center
