--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ task clean(type: Delete) {
 buildscript {
     ext {
         mirai_core_version = "2.7.0"
-        lua_mirai_version = "2.3.4"
+        lua_mirai_version = "2.3.6"
         kotlin_version = '1.5.21'
         kotlin_reflect_version = '1.5.21'
         compose_version = '1.0.1'
@@ -16,5 +16,6 @@ buildscript {
         room_version = "2.3.0"
         hilt_version = "2.38.1"
         app_center_sdk_version = '4.2.0'
+        okhttp_version = '4.9.1'
     }
 }
