--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,8 +119,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-permissions:0.16.0"
+    implementation "com.google.accompanist:accompanist-placeholder-material:0.16.0"
 
     // androidx
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -153,7 +153,8 @@ dependencies {
 
     // okhttp
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    
+    implementation "ru.gildor.coroutines:kotlin-coroutines-okhttp:1.0"
+
     // datastore-preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
