--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.39.1'
     }
 }
 
@@ -10,9 +10,8 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'org.jetbrains.kotlin.plugin.parcelize'
     id "com.google.devtools.ksp"
+    id "org.jetbrains.kotlin.kapt"
 }
-
-apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
@@ -48,7 +47,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.0.1"
     }
     packagingOptions {
         resources {
@@ -68,15 +67,6 @@ kotlin.sourceSets.all {
     languageSettings.useExperimentalAnnotation("net.mamoe.mirai.console.ConsoleFrontEndImplementation")
 }
 
-allprojects {
-    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-        kotlinOptions {
-            freeCompilerArgs = ['-Xjvm-default=enable', '-Xopt-in=kotlin.RequiresOptIn']
-            jvmTarget = "1.8"
-        }
-    }
-}
-
 kapt {
     correctErrorTypes true
     arguments {
@@ -85,40 +75,38 @@ kapt {
 }
 
 dependencies {
-    // implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
 
-    // kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2'
+    implementation project(":lma-base")
+    implementation project(":lma-utils")
+    implementation project(":lma-datastore")
 
     // compose
-    implementation "androidx.compose.runtime:runtime:$compose_version"
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.foundation:foundation-layout:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.animation:animation:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime:1.0.1"
+    implementation "androidx.compose.ui:ui:1.0.1"
+    implementation "androidx.compose.foundation:foundation-layout:1.0.1"
+    implementation "androidx.compose.material:material:1.0.1"
+    implementation "androidx.compose.material:material-icons-extended:1.0.1"
+    implementation "androidx.compose.foundation:foundation:1.0.1"
+    implementation "androidx.compose.animation:animation:1.0.1"
+    implementation "androidx.compose.ui:ui-tooling:1.0.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.1"
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.google.android.material:material:1.4.0'
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    androidTestImplementation "androidx.compose.ui:ui-test:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    testImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.0.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.0.1"
+    androidTestImplementation "androidx.compose.ui:ui-test:1.0.1"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.0.1"
+    testImplementation "androidx.compose.ui:ui-test-junit4:1.0.1"
 
     // navigation-compose
     implementation 'androidx.navigation:navigation-compose:2.4.0-alpha07'
 
     // accompanist
-    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.17.0"
+    implementation "com.google.accompanist:accompanist-insets:0.17.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
     implementation "com.google.accompanist:accompanist-permissions:0.16.0"
     implementation "com.google.accompanist:accompanist-placeholder-material:0.16.0"
 
@@ -143,46 +131,22 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.5.1'
 
     // hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    // annotationProcessor "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "com.google.dagger:hilt-android:2.39.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
 
     // coil
     implementation "io.coil-kt:coil:1.3.2"
     implementation 'io.coil-kt:coil-compose:1.3.2'
 
     // okhttp
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation "ru.gildor.coroutines:kotlin-coroutines-okhttp:1.0"
-
-    // datastore-preferences
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
-
-    // datastore-room
-    implementation "androidx.room:room-runtime:$room_version"
-    // annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    // ksp "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-
-    // mirai
-    implementation ("com.github.only52607:lua-mirai:$lua_mirai_version") {
-        exclude module: "atomicfu", group: "org.jetbrains.kotlinx"
-    }
-    // implementation ("net.mamoe:mirai-core-api:$mirai_core_version")
-    implementation ("net.mamoe:mirai-core:$mirai_core_version") {
-        exclude module: "atomicfu", group: "org.jetbrains.kotlinx"
-    }
-    implementation "org.jetbrains.kotlinx:atomicfu-jvm:0.16.1"
-    implementation "net.mamoe:mirai-console:$mirai_core_version"
 
     // utils
     implementation 'com.github.javiersantos:AppUpdater:2.7'
 
     //app center
-    implementation "com.microsoft.appcenter:appcenter-analytics:$app_center_sdk_version"
-    implementation "com.microsoft.appcenter:appcenter-crashes:$app_center_sdk_version"
-    implementation "com.microsoft.appcenter:appcenter-distribute:$app_center_sdk_version"
-
+    implementation "com.microsoft.appcenter:appcenter-analytics:4.2.0"
+    implementation "com.microsoft.appcenter:appcenter-crashes:4.2.0"
+    implementation "com.microsoft.appcenter:appcenter-distribute:4.2.0"
 }
