--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
-buildscript {
-    ext {
-        mirai_core_version = "2.7.0"
-        lua_mirai_version = "2.3.8"
-        kotlin_version = '1.5.21'
-        kotlin_reflect_version = '1.5.21'
-        compose_version = '1.0.1'
-        coroutines_version = '1.5.0'
-        accompanist_version = '0.17.0'
-        room_version = "2.3.0"
-        hilt_version = "2.38.1"
-        app_center_sdk_version = '4.2.0'
-        okhttp_version = '4.9.1'
-    }
-}
+//plugins {
+//    id 'org.jetbrains.kotlin.jvm'
+//}
+//
+//allprojects {
+//    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+//        kotlinOptions {
+//            freeCompilerArgs = ['-Xjvm-default=enable', '-Xopt-in=kotlin.RequiresOptIn']
+//            jvmTarget = "1.8"
+//        }
+//    }
+//}
