--- a/settings.gradle
+++ b/settings.gradle
@@ -1,32 +1,39 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url "https://plugins.gradle.org/m2/" }
-        gradlePluginPortal()
         google()
         mavenCentral()
     }
     plugins {
-        id 'com.android.application' version '7.1.0-alpha08'
-        id 'com.android.library' version '7.1.0-alpha08'
-        id 'org.jetbrains.kotlin.android' version '1.5.21'
-        id 'org.jetbrains.kotlin.plugin.serialization' version '1.5.21'
-        id "org.jetbrains.kotlin.plugin.parcelize" version '1.5.21' apply false
-        id "com.google.devtools.ksp" version "1.5.21-1.0.0-beta07"
-        id "dagger.hilt.android.plugin" version "2.38.1"
+        id 'com.android.application' version '7.1.0-alpha08' apply false
+        id 'com.android.library' version '7.1.0-alpha08' apply false
+        id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+        id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10' apply false
+        id "org.jetbrains.kotlin.plugin.parcelize" version '1.6.10' apply false
+        id "com.google.devtools.ksp" version "1.6.10-1.0.2" apply false
+        id "org.jetbrains.kotlin.kapt" version "1.6.10" apply false
+        id "com.google.dagger.hilt-android-gradle-plugin" version "2.39.1" apply false
+        id 'org.jetbrains.kotlin.jvm' version "1.6.10" apply false
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
+        mavenLocal()
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://jitpack.io' }
         google()
         mavenCentral()
-        mavenLocal()
     }
 }
 rootProject.name = "LuaMirai For Android"
 include ':app'
+include ':lma-datastore'
+include ':lma-utils'
+include ':lma-base'
