--- a/lma-datastore/build.gradle
+++ b/lma-datastore/build.gradle
@@ -12,11 +12,9 @@ dependencies {
     api "androidx.room:room-runtime:2.3.0"
     ksp "androidx.room:room-compiler:2.3.0"
     api "androidx.room:room-ktx:2.3.0"
+    api "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2'
-
-    api "androidx.datastore:datastore-preferences:1.0.0-rc02"
-    api "androidx.datastore:datastore-preferences:1.0.0-rc02"
 }
 
 android {
