--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,6 @@ include ':app'
 include ':lma-datastore'
 include ':lma-utils'
 include ':lma-base'
+include ':lma-logger'
+include ':lma-script'
+include ':lma-bot'
