--- a/lma-base/build.gradle
+++ b/lma-base/build.gradle
@@ -20,15 +20,15 @@ dependencies {
     api "com.google.dagger:hilt-android:2.39.1"
     api "androidx.compose.runtime:runtime:1.0.1"
 
-    api "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
-    api "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
+    api "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
+    api "org.jetbrains.kotlin:kotlin-stdlib:1.6.20"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
     api "org.jetbrains.kotlinx:atomicfu-jvm:0.16.3"
 
-    api ("com.github.only52607.lua-mirai:lua-mirai-core:2.4.0-alpha.2"){
+    api ("com.github.only52607.lua-mirai:core:+"){
         exclude module: "atomicfu", group: "org.jetbrains.kotlinx"
     }
-    runtimeOnly ("com.github.only52607.lua-mirai:lua-mirai-adapter-luakt:2.4.0-alpha.2"){
+    runtimeOnly ("com.github.only52607.lua-mirai:adapter-luakt:+"){
         exclude module: "atomicfu", group: "org.jetbrains.kotlinx"
     }
     api ("net.mamoe:mirai-core:2.9.2") {
