--- a/lma-script/build.gradle
+++ b/lma-script/build.gradle
@@ -32,4 +32,5 @@ android {
 dependencies {
     implementation project(":lma-base")
     implementation project(":lma-datastore")
+    implementation project(":lma-utils")
 }
