--- a/settings.gradle
+++ b/settings.gradle
@@ -9,18 +9,20 @@ pluginManagement {
         google()
         mavenCentral()
     }
+
     plugins {
-        id 'com.android.application' version '7.1.0-alpha08' apply false
-        id 'com.android.library' version '7.1.0-alpha08' apply false
+        id 'com.android.application' version '7.3.0-alpha08' apply false
+        id 'com.android.library' version '7.3.0-alpha08' apply false
         id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
         id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10' apply false
         id "org.jetbrains.kotlin.plugin.parcelize" version '1.6.10' apply false
         id "com.google.devtools.ksp" version "1.6.10-1.0.2" apply false
         id "org.jetbrains.kotlin.kapt" version "1.6.10" apply false
         id "com.google.dagger.hilt-android-gradle-plugin" version "2.39.1" apply false
-        id 'org.jetbrains.kotlin.jvm' version "1.6.10" apply false
+        id 'org.jetbrains.kotlin.jvm' version "1.6.20" apply false
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
@@ -32,7 +34,8 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "LuaMirai For Android"
+
+rootProject.name = "lma"
 include ':app'
 include ':lma-datastore'
 include ':lma-utils'
@@ -40,3 +43,7 @@ include ':lma-base'
 include ':lma-logger'
 include ':lma-script'
 include ':lma-bot'
+
+if (file("local.settings.gradle").exists()) {
+    apply from: 'local.settings.gradle'
+}
