create logger module

--- a/lma-logger/build.gradle
+++ b/lma-logger/build.gradle
@@ -32,4 +32,6 @@ android {
 dependencies {
     implementation project(":lma-base")
     implementation project(":lma-datastore")
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 }
