--- a/lma-bot/build.gradle
+++ b/lma-bot/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 android {
@@ -32,4 +33,6 @@ android {
 dependencies {
     implementation project(":lma-base")
     implementation project(":lma-datastore")
+    implementation project(":lma-logger")
+    api "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
 }
